feat: refactor iiko relation, add user_locations relation
