# app/Http/Requests/Users/StoreRequest.php
@@ -31,8 +31,8 @@ class StoreRequest extends FormRequest
             'position' => 'required|string|max:255',
             'password' => 'required|string|min:8',
             'role_name' => 'required|string|exists:rbac_roles,name',
-            'iiko_id' => 'required_if:role_name,courier|uuid',
-            'restaurant' => 'required_if:role_name,courier|string|in:go,smaki',
+            'iiko_id' => 'required_if:role_name,courier|uuid|unique:courier_iiko',
+            'locations.*' => 'required|integer|exists:locations,id',
         ];
     }
 }
